--- a/public/experiments/assignment/client/views/users/login.view.html
+++ b/public/experiments/assignment/client/views/users/login.view.html
@@ -6,20 +6,20 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.username"
+                        <input type="text" ng-model="model.user.username"
                                class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" ng-model="user.password"
+                        <input type="password" ng-model="model.user.password"
                                class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="login(user)" href="" class="btn btn-primary btn-block">Login</a>
+                        <a ng-click="model.login(model.user)" href="" class="btn btn-primary btn-block">Login</a>
                     </div>
 
                 </div>
