--- a/public/experiments/assignment/client/views/header/header.view.html
+++ b/public/experiments/assignment/client/views/header/header.view.html
@@ -12,18 +12,18 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-hide="user"
+                <li ng-hide="currentUser"
                     ng-class="{'active': location.url() == '/register'}">
                     <a href="#/register">Register</a>
                 </li>
-                <li ng-hide="user"
+                <li ng-hide="currentUser"
                     ng-class="{'active': location.url() == '/login'}">
                     <a href="#/login">Login</a>
                 </li>
-                <li ng-show="user">
-                    <a href="#/profile">{{user.username}}</a>
+                <li ng-show="currentUser">
+                    <a href="#/profile">{{currentUser.username}}</a>
                 </li>
-                <li ng-hide="!user"
+                <li ng-hide="!currentUser"
                     ng-click="logOut()">
                     <a>Logout</a>
                 </li>
@@ -31,17 +31,17 @@
                     class="visible-xs">
                     <a href="#/home">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li ng-show="user"
+                <li ng-show="currentUser"
                     ng-class="{'active': location.url() == '/profile'}"
                     class="visible-xs">
                     <a href="#/profile">Profile</a>
                 </li>
-                <li ng-show="user.roles.indexOf('admin') >= 0"
+                <li ng-show="currentUser.roles.indexOf('admin') >= 0"
                     ng-class="{'active': location.url() == '/admin'}"
                     class="visible-xs">
                     <a href="#/admin">Admin</a>
                 </li>
-                <li ng-show="user"
+                <li ng-show="currentUser"
                     ng-class="{'active': location.url() == '/forms'}"
                     class="visible-xs">
                     <a href="#/forms">Forms</a>
