--- a/public/experiments/assignment/client/views/header/header.view.html
+++ b/public/experiments/assignment/client/views/header/header.view.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController">
+<nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController as model">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -13,36 +13,36 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-hide="currentUser"
-                    ng-class="{'active': location.url() == '/register'}">
+                    ng-class="{'active': model.$location.url() == '/register'}">
                     <a href="#/register">Register</a>
                 </li>
                 <li ng-hide="currentUser"
-                    ng-class="{'active': location.url() == '/login'}">
+                    ng-class="{'active': model.$location.url() == '/login'}">
                     <a href="#/login">Login</a>
                 </li>
                 <li ng-show="currentUser">
                     <a href="#/profile">{{currentUser.username}}</a>
                 </li>
                 <li ng-hide="!currentUser"
-                    ng-click="logOut()">
+                    ng-click="model.logOut()">
                     <a>Logout</a>
                 </li>
-                <li ng-class="{'active': location.url() == '/home'}"
+                <li ng-class="{'active': model.$location.url() == '/home'}"
                     class="visible-xs">
                     <a href="#/home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li ng-show="currentUser"
-                    ng-class="{'active': location.url() == '/profile'}"
+                    ng-class="{'active': model.$location.url() == '/profile'}"
                     class="visible-xs">
                     <a href="#/profile">Profile</a>
                 </li>
                 <li ng-show="currentUser.roles.indexOf('admin') >= 0"
-                    ng-class="{'active': location.url() == '/admin'}"
+                    ng-class="{'active': model.$location.url() == '/admin'}"
                     class="visible-xs">
                     <a href="#/admin">Admin</a>
                 </li>
                 <li ng-show="currentUser"
-                    ng-class="{'active': location.url() == '/forms'}"
+                    ng-class="{'active': model.$location.url() == '/forms'}"
                     class="visible-xs">
                     <a href="#/forms">Forms</a>
                 </li>
