--- a/public/experiments/assignment/client/views/sidebar/sidebar.view.html
+++ b/public/experiments/assignment/client/views/sidebar/sidebar.view.html
@@ -1,17 +1,17 @@
- <ul class="nav nav-sidebar" ng-controller="SidebarController">
-        <li ng-class="{'active': location.url() == '/home'}">
+ <ul class="nav nav-sidebar" ng-controller="SidebarController as model">
+        <li ng-class="{'active': model.$location.url() == '/home'}">
             <a href="#/home">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li ng-class="{'active': location.url() == '/profile'}"
-            ng-show="user">
+        <li ng-class="{'active': model.$location.url() == '/profile'}"
+            ng-show="currentUser">
             <a href="#/profile">Profile</a>
         </li>
-        <li ng-class="{'active': location.url() == '/admin'}"
-            ng-show="user.roles.indexOf('admin') >= 0">
+        <li ng-class="{'active': model.$location.url() == '/admin'}"
+            ng-show="currentUser.roles.indexOf('admin') >= 0">
             <a href="#/admin">Admin</a>
         </li>
-        <li ng-class="{'active': location.url() == '/forms'}"
-            ng-show="user">
+        <li ng-class="{'active': model.$location.url() == '/forms'}"
+            ng-show="currentUser">
             <a href="#/forms">Forms</a>
         </li>
  </ul>
