--- a/public/experiments/assignment/client/views/users/login.view.html
+++ b/public/experiments/assignment/client/views/users/login.view.html
@@ -7,6 +7,7 @@
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
                         <input type="text" ng-model="model.user.username"
+                               autofocus="autofocus"
                                class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
@@ -19,7 +20,8 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="model.login(model.user)" href="" class="btn btn-primary btn-block">Login</a>
+                        <a ng-click="model.login(model.user)" href=""
+                           class="btn btn-primary btn-block">Login</a>
                     </div>
 
                 </div>
