Added a validation message if user does not exist and tries to login with unregistered username and password

--- a/public/experiments/assignment/client/views/users/login.view.html
+++ b/public/experiments/assignment/client/views/users/login.view.html
@@ -25,6 +25,9 @@
                     </div>
 
                 </div>
+                <div ng-show="model.showAlert" class="alert alert-info">
+                    <strong>User does not exist!</strong> Entered wrong username or password.
+                </div>
             </form>
         </div>
     </div>
