--- a/public/experiments/assignment/client/views/users/profile.view.html
+++ b/public/experiments/assignment/client/views/users/profile.view.html
@@ -24,14 +24,14 @@
                 <div class="form-group">
                     <label for="fname" class="col-sm-2">First Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="model.currentUser.firstname"
+                        <input type="text" ng-model="model.currentUser.firstName"
                                class="form-control" id="fname" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="lname" class="col-sm-2">Last Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="model.currentUser.lastname"
+                        <input type="text" ng-model="model.currentUser.lastName"
                                class="form-control" id="lname" placeholder="Last Name">
                     </div>
                 </div>
