Passed restId to rating service to associate reviews with restautants. Also added a info strip in searchdetails page. Added functionality to search by userId in user service

--- a/public/project-angular/views/search/searchdetails.view.html
+++ b/public/project-angular/views/search/searchdetails.view.html
@@ -55,7 +55,11 @@
         </div>
 
     </div>
-
+        <div class="alert alert-info alert-dismissable">
+            <a class="panel-close close" data-dismiss="alert">×</a>
+            <i class="fa fa-info-circle"></i>
+            This is an <strong>.alert</strong>. Use this to show important messages to the user.
+        </div>
         <div class="panel panel-default margin-panel">
             <div class="panel-heading">
                 <h3 class="panel-title">Reviews for {{rest.name}}</h3>
