--- a/public/project-angular/views/search/searchdetails.view.html
+++ b/public/project-angular/views/search/searchdetails.view.html
@@ -71,18 +71,18 @@
                     <!-- Comments Form -->
                     <div class="well margin-well" ng-repeat="rate in defaultRating">
                         <h4>Start your review!</h4>
-                        <!--<i class="fa fa-star-o fa-lg"></i>-->
-                        <!--<i class="fa fa-star-o fa-lg"></i>-->
-                        <!--<i class="fa fa-star-o fa-lg"></i>-->
-                        <!--<i class="fa fa-star-o fa-lg"></i>-->
-                        <!--<i class="fa fa-star-o fa-lg"></i>-->
-                        <ng-rating ng-model="rate.rating"
-                                   icon-class="rate.iconClass"
-                                   editable="rate.editableRating"
-                                   stars-count="rate.starsCount"
-                                   based-on="rate.basedOn"
-                                   show-grade="rate.showGrade">
-                        </ng-rating>
+                        <i class="fa fa-star-o fa-lg"></i>
+                        <i class="fa fa-star-o fa-lg"></i>
+                        <i class="fa fa-star-o fa-lg"></i>
+                        <i class="fa fa-star-o fa-lg"></i>
+                        <i class="fa fa-star-o fa-lg"></i>
+                        <!--<ng-rating ng-model="rate.rating"-->
+                                   <!--icon-class="rate.iconClass"-->
+                                   <!--editable="rate.editableRating"-->
+                                   <!--stars-count="rate.starsCount"-->
+                                   <!--based-on="rate.basedOn"-->
+                                   <!--show-grade="rate.showGrade">-->
+                        <!--</ng-rating>-->
                         <form role="form">
                             <div class="form-group">
                                 <textarea class="form-control" ng-model="review" rows="3"></textarea>
@@ -105,38 +105,45 @@
                             </h4>
                             <!--Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante-->
                             <!--sollicitudin commodo.-->
-                            {{review.description}}
+                            <p ng-hide="selectedreview == $index">{{review.description}}</p>
+                            <div ng-if="selectedreview == $index">
+                                <textarea class="form-control" rows="2" type="text" ng-model="editablereview"></textarea>
+                                <button class="btn btn-success" ng-click="save(editablereview,$index)">Save</button>
+
+                                <button class="btn btn-danger" ng-click="disableEditor()">Cancel</button>
+                            </div>
                             <i class="fa fa-flag pull-right"></i>
                             <div class="row">
                                 <div class="col-xs-8">
-                                    <!--<i class="fa fa-star fa-lg"></i>-->
-                                    <!--<i class="fa fa-star fa-lg"></i>-->
-                                    <!--<i class="fa fa-star fa-lg"></i>-->
-                                    <!--<i class="fa fa-star-o fa-lg"></i>-->
-                                    <!--<i class="fa fa-star-o fa-lg"></i>-->
-                                    <ng-rating ng-model="review.rating"
-                                               icon-class="review.iconClass"
-                                               editable="review.editableRating"
-                                               stars-count="review.starsCount"
-                                               based-on="review.basedOn"
-                                               show-grade="review.showGrade">
-                                    </ng-rating>
+                                    <i class="fa fa-star fa-lg"></i>
+                                    <i class="fa fa-star fa-lg"></i>
+                                    <i class="fa fa-star fa-lg"></i>
+                                    <i class="fa fa-star-o fa-lg"></i>
+                                    <i class="fa fa-star-o fa-lg"></i>
+                                    <!--<ng-rating ng-model="review.rating"-->
+                                               <!--icon-class="review.iconClass"-->
+                                               <!--editable="review.editableRating"-->
+                                               <!--stars-count="review.starsCount"-->
+                                               <!--based-on="review.basedOn"-->
+                                               <!--show-grade="review.showGrade">-->
+                                    <!--</ng-rating>-->
                                     {{review.createdOn | date}}
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="btn-group pull-right">
-                                        <a class="btn btn-default" href="#">
+                                        <a class="btn btn-default" ng-click="editReview($index)">
                                             <i title="Edit Review" class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a class="btn btn-default" href="#">
+                                        <a class="btn btn-default" ng-click="deleteReview($index)">
                                             <i title="Delete Review" class="fa fa-trash-o"></i>
                                         </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <hr>
                     </div>
                 </div>
             </div>
