Renamed project folder name

--- a/public/project/views/header/header.view.html
+++ b/public/project/views/header/header.view.html
@@ -36,7 +36,7 @@
                     <a href="#/login" class="margin-set2">Login</a>
                 </li>
                 <li ng-show="user">
-                    <a href="#/profile">{{user.username}}</a>
+                    <a href="">{{user.username}}</a>
                 <li ng-hide="!user"
                     ng-click="logOut()">
                     <a>Logout</a>
