--- a/public/project/views/search/searchdetails.view.html
+++ b/public/project/views/search/searchdetails.view.html
@@ -55,10 +55,10 @@
         </div>
 
     </div>
-        <div class="alert alert-info alert-dismissable">
+        <div ng-if="!user" class="alert alert-info alert-dismissable">
             <a class="panel-close close" data-dismiss="alert">×</a>
             <i class="fa fa-info-circle"></i>
-            This is an <strong>.alert</strong>. Use this to show important messages to the user.
+            Please <strong>login</strong> to review your favorite restaurant!
         </div>
         <div class="panel panel-default margin-panel">
             <div class="panel-heading">
